increase perspective, preventing overflow, comment out perspective origin

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -48,8 +48,8 @@ body {
   height: 400px;
   width: 400px;
 
-  perspective: 800px;
-  perspective-origin: top right;
+  perspective: 900px;
+  /* perspective-origin: top right bottom left; */
 }
 
 .cube {
